--- a/AFI10/app/src/main/res/layout/recycler_itens_view.xml
+++ b/AFI10/app/src/main/res/layout/recycler_itens_view.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_marginTop="32dp"
     android:layout_margin="2dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
